# rc2025

./: .gitignore  README.md  rc2025.cpp  run.sh
go2_runner/: CMakeLists.txt  app_runtime.cpp  app_runtime.h  aruco_server.cpp  aruco_server.h  callbacks.cpp  callbacks.h  globals.cpp  globals.h  line_follow.cpp  line_follow.h  main.cpp  params.h  rc2025.cpp  utils.cpp  utils.h  visualizer.cpp  visualizer.h
go2_runner/cases/: case0.cpp  case0.h  case1.cpp  case1.h  case2.cpp  case2.h  case3.cpp  case3.h  case4.cpp  case4.h
network_module/yolo_Geometry/: get_camera.py  main.py  readme.txt
